Finished collapse-container 0.1. Basic functionality, theres things to fix and implement

--- a/src/components/collapse-container.module.css
+++ b/src/components/collapse-container.module.css
@@ -1,7 +1,7 @@
 /* CSS module for collapse-container.js */
 /*
  * TODO: move the collapse logic from .collapse-content to .collapse-container. The height needs to be a hardcoded value in pixel, only if I use SASS I can use variables to calculate the hight
- * */
+ */
 .collapse-container {
   background-color: #ebecf0;
   border-radius: 4px 4px 0px 0px;
@@ -9,25 +9,21 @@
   margin-bottom: 20px;
   overflow-y: hidden;
   max-height: 57px;
+  width: 100%;
   transition: max-height 1s;
 }
 .collapse-header {
-  /* background-color: rgba(0, 0, 0, 0.1); */
   display: flex;
-  height: 52px;
+  /*equal to .collapse-container height - border-top-width*/
+  /* height: 52px; */
   flex-flow: row nowrap;
   justify-content: space-between;
   align-items: center;
+  margin: 4px;
 }
-.collapse-header > h3 {
-  margin: 0 auto;
-  height: 52px;
-  /* padding-top: 6px; */
-  /* margin-bottom: 0px; */
-  /* margin-left: 6px; */
-}
+.collapse-header > h3,
 .collapse-header > h5 {
-  margin: 0px;
+  margin: 0 auto;
 }
 .header-img-container {
   display: block;
@@ -38,6 +34,12 @@
   background-size: 48px 48px;
   background-position: -4px;
   margin-right: 2px;
+}
+.header-img-container.small {
+  width: 20px;
+  height: 20px;
+  background-size: 28px 28px;
+  background-position: -4px;
 }
 .header-img-container:hover {
   background-image: url('../images/ic_add_white_48dp.png');
